namespace __Data.Script
{
    internal class AnimString
    {
        internal static string isMove = "isMoving";
        internal static string isGround = "isGrounded";
        internal static string yVelocity = "yVelocity";
        internal static string isAlive = "isAlive";
        internal static string canMove = "canMove";
        internal static string attackTrigger = "attacks";
        internal static string hasTarget = "hasTarget";
        internal static string isDash = "isDashing";
        internal static string spells = "spells";
        internal static string atkRangedTrigger = "atkRanged";
        internal static string atkMeleeTrigger = "atkMelee";
        internal static string atkLazer = "atkLazer";
        internal static string shield = "shield";
        internal static string healing = "healing";
        internal static string atkMeteor = "atkMeteor";
        internal static string hit = "hit";
        internal static string check = "check";
    }
}
